# papersmith

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
