[package]
name = "papersmith"
description = "AI-Powered PDF Renamer in Rust."
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ben Letchford <me@benletchford.com>"]
documentation = "https://github.com/benletchford/papersmith"
homepage = "https://github.com/benletchford/papersmith"
repository = "https://github.com/benletchford/papersmith"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
colog = "1.3.0"
log = "0.4.27"
tokio = { version = "1.45.0", features = ["full"] }
async-openai = "0.28.1"
serde_json = "1.0.140"
base64 = "0.22.1"
repair_json = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
