[package]
name = "papersmith"
description = "AI-Powered PDF Renamer in Rust."
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["Ben Letchford <me@benletchford.com>"]
documentation = "https://github.com/benletchford/papersmith"
homepage = "https://github.com/benletchford/papersmith"
repository = "https://github.com/benletchford/papersmith"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
colog = "1.4.0"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
async-openai = "0.29.3"
serde_json = "1.0.145"
base64 = "0.22.1"
repair_json = "0.1.0"
serde = { version = "1.0.225", features = ["derive"] }
glob = "0.3.3"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
